Проект завершен, отправлен на первую проверку

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,11 @@ TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
 
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
+
+# Настройки PostgreSQL
+POSTGRES_DB=django_db
+POSTGRES_USER=django_user
+POSTGRES_PASSWORD=django_password
+
+# Настройки Redis
+REDIS_URL=redis://redis:6379/0
