--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+Django==4.2.11
+djangorestframework==3.14.0
 psycopg2-binary==2.9.7
 python-decouple==3.8
 celery==5.3.4
 redis==5.0.1
+gunicorn==21.2.0
+djangorestframework-simplejwt==5.3.0
+setuptools
