--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ redis==5.0.1
 gunicorn==21.2.0
 djangorestframework-simplejwt==5.3.0
 setuptools
+django-cors-headers==4.3.1
+drf-yasg==1.21.7
+Pillow==12.1.0
