донастройка deploy.yml

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=your-secret-key-here
+SECRET_KEY=)r3=lrrjlaf-#$!yy^tgvf3o&rpdx7r8u-=-1+3=#!)_s593pm
 DEBUG=True
 DB_NAME=habits_db
 DB_USER=habits_user
