--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=)r3=lrrjlaf-#$!yy^tgvf3o&rpdx7r8u-=-1+3=#!)_s593pm
+SECRET_KEY=!8v25rxw=x9*@8*bmx67hwwc@juz3hss=-=mt()v2euy2$p2t6
 DEBUG=True
 DB_NAME=habits_db
 DB_USER=habits_user
