"fix: pin setuptools==65.5.0 to keep pkg_resources"

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,10 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install setuptools and pkg_resources
-        run: |
-          pip install setuptools wheel
-          pip install pkg_resources
+#      - name: Install setuptools and pkg_resources
+#        run: |
+#          pip install setuptools wheel
+#          pip install pkg_resources
 
       - name: Install dependencies
         run: |
