--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ python-decouple==3.8
 celery==5.3.4
 redis==5.0.1
 gunicorn==21.2.0
-djangorestframework-simplejwt==5.3.0
-setuptools>=67.0.0
+djangorestframework-simplejwt==5.5.1
+setuptools==75.8.0
 django-cors-headers==4.3.1
 drf-yasg==1.21.7
 Pillow==12.1.0
