Итоговое задание. Первая отправка на проверку

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,9 @@
 version: '3.8'
 
 services:
-  # Сервис PostgreSQL
   db:
-    image: postgres:13
-    env_file:
-      - .env
+    image: postgres:15
+    env_file: .env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -20,9 +18,8 @@ services:
       timeout: 5s
       retries: 5
 
-  # Сервис Redis
   redis:
-    image: redis:alpine
+    image: redis:7-alpine
     ports:
       - "6379:6379"
     healthcheck:
@@ -31,53 +28,61 @@ services:
       timeout: 5s
       retries: 5
 
-  # Сервис Django Backend
-  web:
+  django:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn DjREST.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
-    env_file:
-      - .env
+    env_file: .env
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
+    ports:
+      - "8000:8000"
     environment:
-      - DEBUG=1
+      - DEBUG=${DEBUG:-False}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-localhost}
 
-  # Сервис Celery Worker
   celery_worker:
     build: .
     command: celery -A DjREST worker --loglevel=info
     volumes:
       - .:/app
-    env_file:
-      - .env
+    env_file: .env
     depends_on:
       - redis
       - db
     environment:
-      - DEBUG=1
+      - DEBUG=${DEBUG:-False}
 
-  # Сервис Celery Beat (для периодических задач)
   celery_beat:
     build: .
     command: celery -A DjREST beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - .:/app
-    env_file:
-      - .env
+    env_file: .env
     depends_on:
       - redis
       - db
     environment:
-      - DEBUG=1
+      - DEBUG=${DEBUG:-False}
 
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./staticfiles:/static
+    depends_on:
+      - django
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
-# Определение тома для хранения данных PostgreSQL
 volumes:
   postgres_data:
